--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sliding_clipped_nav_bar: ^3.1.0+4
   badges: ^3.1.1
   mvc_pattern: ^8.12.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
